Funcionalidad Google correcta y Principio de funcionalidad Registro

--- a/app/src/main/res/layout/inici.xml
+++ b/app/src/main/res/layout/inici.xml
@@ -35,7 +35,7 @@
         app:layout_constraintVertical_bias="0.023" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/ajustesInici"
         android:layout_width="82dp"
         android:layout_height="73dp"
         android:scaleType="fitStart"
