--- a/app/src/main/res/layout/ajustes.xml
+++ b/app/src/main/res/layout/ajustes.xml
@@ -51,13 +51,11 @@
         android:id="@+id/ConfigUser"
         android:layout_width="199dp"
         android:layout_height="65dp"
-        android:text="Configuracion"
+        android:text="Configuracion del usuario"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.581" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/Logout"
