ExcoApp Format text

--- a/app/src/main/res/layout/ajustes.xml
+++ b/app/src/main/res/layout/ajustes.xml
@@ -25,8 +25,10 @@
         android:layout_height="43dp"
         android:gravity="center_horizontal"
         android:text="usuario"
+        android:textStyle="bold"
+        android:typeface="serif"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -51,6 +53,8 @@
         android:id="@+id/ConfigUser"
         android:layout_width="199dp"
         android:layout_height="65dp"
+        android:textStyle="bold"
+        android:typeface="serif"
         android:text="Configuracion del usuario"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,6 +66,8 @@
         android:layout_width="199dp"
         android:layout_height="65dp"
         android:text="Log Out"
+        android:textStyle="bold"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
