--- a/app/src/main/res/layout/inici.xml
+++ b/app/src/main/res/layout/inici.xml
@@ -24,9 +24,11 @@
         android:layout_width="184dp"
         android:layout_height="43dp"
         android:gravity="center_horizontal"
+        android:textStyle="bold"
+        android:typeface="serif"
         android:text="usuario"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.409"
@@ -75,6 +77,8 @@
         android:id="@+id/button4"
         android:layout_width="199dp"
         android:layout_height="65dp"
+        android:textStyle="bold"
+        android:typeface="serif"
         android:text="JUGAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,6 +91,8 @@
         android:id="@+id/button5"
         android:layout_width="199dp"
         android:layout_height="65dp"
+        android:textStyle="bold"
+        android:typeface="serif"
         android:text="Ranking"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
