--- a/app/src/main/res/layout/ranking.xml
+++ b/app/src/main/res/layout/ranking.xml
@@ -59,10 +59,12 @@
     <TextView
         android:id="@+id/textView8"
         android:layout_width="278dp"
-        android:layout_height="45dp"
+        android:layout_height="55dp"
         android:text="RANKING DE PUNTUACION"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:textStyle="bold"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
