--- a/app/src/main/res/layout/registre.xml
+++ b/app/src/main/res/layout/registre.xml
@@ -65,7 +65,7 @@
         android:scaleType="fitStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.189"
+        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.513"
@@ -73,10 +73,12 @@
 
     <Button
         android:id="@+id/btnregistre"
-        android:layout_width="199dp"
-        android:layout_height="65dp"
+        android:layout_width="228dp"
+        android:layout_height="63dp"
         android:text="REGISTRARSE"
         android:textSize="22dp"
+        android:textStyle="bold"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,10 +91,11 @@
         android:layout_width="352dp"
         android:layout_height="73dp"
         android:text="FORMULARIO DE REGISTRO"
+        android:textStyle="bold"
+        android:typeface="serif"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="30dp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
@@ -103,14 +106,17 @@
 
     <Button
         android:id="@+id/btnBackLogIn"
-        android:layout_width="221dp"
-        android:layout_height="36dp"
+        android:layout_width="244dp"
+        android:layout_height="51dp"
         android:text="VOLVER INICIO SESSION"
+        android:textStyle="bold"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.926" />
+        app:layout_constraintVertical_bias="0.933" />
 
     <TextView
         android:id="@+id/textView3"
