--- a/app/src/main/res/layout/tema.xml
+++ b/app/src/main/res/layout/tema.xml
@@ -25,8 +25,11 @@
         android:layout_height="43dp"
         android:gravity="center_horizontal"
         android:text="usuario"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:typeface="serif"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.409"
@@ -66,6 +69,8 @@
         android:layout_height="65dp"
         android:text="TEMA 1"
         android:textSize="25dp"
+        android:textStyle="bold"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,6 +83,8 @@
         android:layout_height="65dp"
         android:text="TEMA 2"
         android:textSize="25dp"
+        android:textStyle="bold"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,6 +98,8 @@
         android:text="TEMA 3"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:textStyle="bold"
+        android:typeface="serif"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -104,6 +113,7 @@
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="35dp"
+        android:typeface="serif"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
