--- a/app/src/main/res/layout/user_config.xml
+++ b/app/src/main/res/layout/user_config.xml
@@ -41,8 +41,11 @@
         android:layout_height="43dp"
         android:gravity="center_horizontal"
         android:text="usuario"
+        android:textColor="@color/black"
         android:textAlignment="center"
         android:textSize="25sp"
+        android:textStyle="bold"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -55,7 +58,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Configuracion del usuario"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:textSize="30sp"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
@@ -67,8 +73,11 @@
         android:id="@+id/textView5"
         android:layout_width="229dp"
         android:layout_height="27dp"
+        android:textStyle="bold"
         android:text="Nombre de Usuario"
+        android:textColor="@color/black"
         android:textSize="20sp"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.401"
@@ -159,7 +168,10 @@
         android:layout_width="145dp"
         android:layout_height="26dp"
         android:text="Email"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:textSize="20sp"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.274"
@@ -198,6 +210,9 @@
         android:layout_width="221dp"
         android:layout_height="29dp"
         android:text="Repetir Contrasenya"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:typeface="serif"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -210,7 +225,10 @@
         android:id="@+id/textView7"
         android:layout_width="141dp"
         android:layout_height="29dp"
+        android:textColor="@color/black"
         android:text="Contrasenya"
+        android:textStyle="bold"
+        android:typeface="serif"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -224,6 +242,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Modificar"
+        android:textStyle="bold"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.206"
@@ -235,6 +255,8 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:typeface="serif"
+        android:textStyle="bold"
         android:text="Cancelar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
