pantallas cambios correctos

--- a/app/src/main/res/layout/ranking.xml
+++ b/app/src/main/res/layout/ranking.xml
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
-        android:id="@+id/ajustesInici"
+        android:id="@+id/ajustesRanking"
         android:layout_width="82dp"
         android:layout_height="73dp"
         android:scaleType="fitStart"
