--- a/app/src/main/res/layout/inici.xml
+++ b/app/src/main/res/layout/inici.xml
@@ -26,6 +26,7 @@
         android:gravity="center_horizontal"
         android:textStyle="bold"
         android:typeface="serif"
+        android:textColor="@color/black"
         android:text="usuario"
         android:textAlignment="center"
         android:textSize="25sp"
